Remade Player class